def localProperties = new Properties()
def localPropertiesFile = rootProject.file('local.properties')
if (localPropertiesFile.exists()) {
    localPropertiesFile.withReader('UTF-8') { reader ->
        localProperties.load(reader)
    }
}

def flutterRoot = localProperties.getProperty('flutter.sdk')
if (flutterRoot == null) {
   /* throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")*/
}

def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
if (flutterVersionCode == null) {
    flutterVersionCode = '1'
}

def flutterVersionName = localProperties.getProperty('flutter.versionName')
if (flutterVersionName == null) {
    flutterVersionName = '1.0'
}

apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"

android {
    compileSdkVersion flutter.compileSdkVersion

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    tasks.withType(JavaCompile) {
        options.compilerArgs << '--add-opens=java.base/java.io=ALL-UNNAMED'
    }

    defaultConfig {
        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
        applicationId "com.example.smartbuddy"
        minSdkVersion 23
        targetSdkVersion flutter.targetSdkVersion
        versionCode flutterVersionCode.toInteger()
        versionName flutterVersionName
        ndk {
            abiFilters "armeabi-v7a", "arm64-v8a"
        }
    }

    packagingOptions {
        pickFirst 'lib/*/libc++_shared.so'
        pickFirst 'lib/*/libyuv.so'
        pickFirst 'lib/*/libopenh264.so'
        pickFirst 'lib/*/liblog.so'
    }

    buildTypes {
        release {
            // TODO: Add your own signing config for the release build.
            // Signing with the debug keys for now, so `flutter run --release` works.
            signingConfig signingConfigs.debug
        }
    }
}

configurations.all {
    exclude group: "com.thingclips.smart" ,module: 'thingsmart-modularCampAnno'
    resolutionStrategy {
        force 'com.tuya.smart:tuyasmart-geofence:4.0.0'
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.aar'])
    implementation 'com.alibaba:fastjson:1.1.67.android'
    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.14.9'
    implementation 'com.tuya.smart:tuyasmart-mqtt:3.17.0'
    implementation ('com.thingclips.smart:thingsmart-geofence:5.1.0') {
        exclude group: 'com.tuya.smart', module: 'tuyasmart-geofence'
    }
    implementation 'com.tuya.smart:tuyasmart-geofence:4.0.0'

    // The latest stable App SDK for Android.
//    implementation 'com.facebook.soloader:soloader:0.10.4+'
//    implementation 'com.thingclips.smart:thingsmart:5.11.3'

    implementation project(':base_res')
    implementation project(":home")
    implementation project(":device_config")
    implementation project(":device_management")
    implementation project(":ipc")
    implementation project(":sweeper")
    implementation project(":ble_lock")

//    implementation 'cn.yipianfengye.android:zxing-library:2.2'

}

flutter {
    source '../..'
}
